Bug 1879731: Address clang-tidy concerns in BCMapCellIterator. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D202316